--- a/trunk/README
+++ b/trunk/README
@@ -10,7 +10,7 @@ REQUIREMENTS:
 	(Required) GTK 2.6.0 or newer
 
 INSTALLATION:
-	Just run 'python setup.py install' as root.
+	Just run 'python2.5 setup.py install' as root.
 
 FEATURES:
 	+ query connections over an arbitrary timeframe
